# WXRDemo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  reflectivetyobject.cpp  reflectivetyobject.h  weatherobject.cpp  weatherobject.h
